# irmagician

./: LICENSE  README.md  irmcli.py  pyproject.toml
